--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-portfolio",
+  "name": "portfolio-challenge",
   "version": "1.0.0",
   "description": "",
   "main": "index.html",
